Give 694 the three things that would have made its own fix fail
The axis 694 asks for can be built and be worthless, in a way the item did not say.
RontoLispCli.enableSimd probes for the incubator module and, when it is absent, warns and
runs the scalar kernels; CiSpecE2eTest asserts stderr by containment per expected line, so
an unexpected warning is not a failure. A --simd axis added naively therefore goes green
with the flag inert -- the same "every case on one side of the condition" this item exists
to kill, rebuilt inside the fix for it. ExamplesE2eTest already guards this at two sites.
Since --simd is semantically transparent, the absence of that warning is the only positive
evidence available, and the item now says to assert on it.

A third option was missing and is better than both that were listed. standalone: already
runs one case as one program per backend, for cases that cannot be concatenated because
running them ends the process. A flags: field there breaks neither the concatenation nor
doubles the run, on a mechanism already paid for everywhere -- with the caveat, written
down, that the record would then carry two unrelated reasons for existing, which is how
the next reader misses the axis.

And the obvious middle -- a second pass over only the cases that touch packed floats -- is
recorded as rejected before someone proposes it. A judgement-chosen subset puts the next
defect in a case nobody classified as relevant, and 692 arrived through exactly that door,
an unrelated lane's fixture.

Measurement guidance sharpened from "measure the cost" to the ratio that decides it:
per-run fixed cost against per-case marginal cost, 492 corpus cases against 1 standalone.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Ahqksf3ojxYdshtwWfsUtb